--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1 {
   
   body{
     
-    background-image: url("/imagenes/fondo.jpg");
+    background-image: url("/fondo.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     
